blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/Matter__c.object-meta.xml
<CustomObject>
    <description>One piece of client work under one engagement letter: a legal matter, audit, tax job or consulting project. Holds scope, billing model, team and dates. Created when a deal is won, and has its own delivery pipeline.</description>
    <label>Matter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>