blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Aml_check_status__c.field-meta.xml
<CustomField>
    <fullName>Aml_check_status__c</fullName>
    <description>Status of client identity and source-of-funds checks required by money laundering rules for this matter type.</description>
    <label>AML check status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Enhanced due diligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>