blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Billing_frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_frequency__c</fullName>
    <description>How often the client is invoiced.</description>
    <label>Billing frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>On milestones</fullName>
            </value>
            <value>
                <fullName>On completion</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>