blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Billing_model__c.field-meta.xml
<CustomField>
    <fullName>Billing_model__c</fullName>
    <description>How this matter is charged, copied from the engagement letter.</description>
    <label>Billing model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Fixed fee</fullName>
            </value>
            <value>
                <fullName>Capped fee</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Success fee</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>