blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Budget_hours__c.field-meta.xml
<CustomField>
    <fullName>Budget_hours__c</fullName>
    <description>Hours the team has budgeted. Compared with hours recorded in the billing system.</description>
    <label>Budget hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>