blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Close_reason__c.field-meta.xml
<CustomField>
    <fullName>Close_reason__c</fullName>
    <description>Why the matter ended without completing. Required on the withdrawn stage.</description>
    <label>Close reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client withdrew</fullName>
            </value>
            <value>
                <fullName>We withdrew</fullName>
            </value>
            <value>
                <fullName>Conflict arose</fullName>
            </value>
            <value>
                <fullName>Non-payment</fullName>
            </value>
            <value>
                <fullName>Work no longer needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>