blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restricts who can see the matter record. Set for sensitive matters, with an ethical wall where needed.</description>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>