blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Engagement_letter_signed_date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_letter_signed_date__c</fullName>
    <description>The date the client signed the engagement letter. Empty means work should not have started.</description>
    <label>Engagement letter signed date</label>
    <type>Date</type>
</CustomField>