blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Fee_estimate__c.field-meta.xml
<CustomField>
    <fullName>Fee_estimate__c</fullName>
    <description>Total fees expected for the matter, or the fixed or capped amount.</description>
    <label>Fee estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>