blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Matter_manager__c.field-meta.xml
<CustomField>
    <fullName>Matter_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member who runs the matter day to day.</description>
    <label>Matter manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Matters Matter manager</relationshipLabel>
    <relationshipName>Matter_Matter_manager</relationshipName>
    <type>Lookup</type>
</CustomField>