blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Matter_reference__c.field-meta.xml
<CustomField>
    <fullName>Matter_reference__c</fullName>
    <description>The reference from the practice management or billing system. Matches CRM to invoices.</description>
    <label>Matter reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>