blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Responsible_partner__c.field-meta.xml
<CustomField>
    <fullName>Responsible_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner accountable for the matter.</description>
    <label>Responsible partner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Matters Responsible partner</relationshipLabel>
    <relationshipName>Matter_Responsible_partner</relationshipName>
    <type>Lookup</type>
</CustomField>