blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Service_area__c.field-meta.xml
<CustomField>
    <fullName>Service_area__c</fullName>
    <description>The practice or service this matter belongs to. Used for reporting by practice.</description>
    <label>Service area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>Disputes</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Audit and assurance</fullName>
            </value>
            <value>
                <fullName>Regulatory and compliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>