blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Cleared to start</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Awaiting client</fullName>
            </value>
            <value>
                <fullName>Final billing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>