blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>The date work started, which must be after the engagement letter was signed.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>