blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/fields/Target_end_date__c.field-meta.xml
<CustomField>
    <fullName>Target_end_date__c</fullName>
    <description>The date the work is expected to be complete.</description>
    <label>Target end date</label>
    <type>Date</type>
</CustomField>