blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/validationRules/Gate_matter_delivery_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_matter_delivery_closed</fullName>
    <active>true</active>
    <description>Stage gate: Matter delivery, Closed and later stages need Target end date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Opening", 1, "Cleared to start", 2, "In progress", 3, "Awaiting client", 4, "Final billing", 5, "Closed", 6, 0) &gt;= 6, ISBLANK(Target_end_date__c))</errorConditionFormula>
    <errorDisplayField>Target_end_date__c</errorDisplayField>
    <errorMessage>Fill in Target end date before moving to Closed.</errorMessage>
</ValidationRule>