blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/validationRules/Gate_matter_delivery_final_billing.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_matter_delivery_final_billing</fullName>
    <active>true</active>
    <description>Stage gate: Matter delivery, Final billing and later stages need Billing model and Fee estimate.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Opening", 1, "Cleared to start", 2, "In progress", 3, "Awaiting client", 4, "Final billing", 5, "Closed", 6, 0) &gt;= 5, OR(ISBLANK(TEXT(Billing_model__c)), ISBLANK(Fee_estimate__c)))</errorConditionFormula>
    <errorMessage>Fill in Billing model and Fee estimate before moving to Final billing.</errorMessage>
</ValidationRule>