blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/validationRules/Gate_matter_delivery_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_matter_delivery_in_progress</fullName>
    <active>true</active>
    <description>Stage gate: Matter delivery, In progress and later stages need Start date and Target end date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Opening", 1, "Cleared to start", 2, "In progress", 3, "Awaiting client", 4, "Final billing", 5, "Closed", 6, 0) &gt;= 3, OR(ISBLANK(Start_date__c), ISBLANK(Target_end_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Start date and Target end date before moving to In progress.</errorMessage>
</ValidationRule>