blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/validationRules/Lost_matter_delivery_withdrawn.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_matter_delivery_withdrawn</fullName>
    <active>true</active>
    <description>Lost reason: Matter delivery, Withdrawn needs Close reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Withdrawn"), ISBLANK(TEXT(Close_reason__c)))</errorConditionFormula>
    <errorDisplayField>Close_reason__c</errorDisplayField>
    <errorMessage>Fill in Close reason before closing this as Withdrawn.</errorMessage>
</ValidationRule>