blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/listViews/Active_matters.listView-meta.xml
<ListView>
    <fullName>Active_matters</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Target_end_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Opening,Cleared to start,In progress,Awaiting client,Final billing</value>
    </filters>
    <label>Active matters</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>