blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/listViews/Matters_ready_to_bill.listView-meta.xml
<ListView>
    <fullName>Matters_ready_to_bill</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Target_end_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Final billing</value>
    </filters>
    <label>Matters ready to bill</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>