blueprints/consultancy-professional-services/salesforce/force-app/main/default/objects/Matter__c/listViews/Matters_without_letter.listView-meta.xml
<ListView>
    <fullName>Matters_without_letter</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Start_date__c</columns>
    <columns>Engagement_letter_signed_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <filters>
        <field>Engagement_letter_signed_date__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Matters without a signed letter</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>